--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,28 +1,57 @@
-name: Android CI
+name: Generate Wrapper & Build APK (No Local PC)
 
+# متى يتم تشغيل الـWorkflow
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
+    # استخدام أحدث نسخة من Ubuntu
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # 1. سحب الكود من المستودع
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Maturin
+        run: pip install maturin
+
+      # 2. إعداد بيئة جافا (JDK)
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: 'temurin'
           java-version: '17'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build Debug APK
+
+      # --- الجزء الخاص بتوليد الـWrapper بدون كمبيوتر محلي ---
+      # 3. تنزيل Gradle 8.2 بشكل مؤقت
+      - name: Download Gradle 8.2 temporarily
+        run: wget https://services.gradle.org/distributions/gradle-8.2-bin.zip
+
+      # 4. فك ضغط ملف Gradle المؤقت
+      - name: Unzip temporary Gradle
+        run: unzip gradle-8.2-bin.zip
+
+      # 5. استخدام Gradle المؤقت لتوليد ملفات الـWrapper الخاصة بمشروعك
+      - name: Generate project's Gradle Wrapper files
+        run: ./gradle-8.2/bin/gradle wrapper --gradle-version 8.2 --distribution-type all
+      # --- نهاية جزء التوليد ---
+
+      # الآن بعد أن تم إنشاء ملفات الـWrapper، نستخدمها لبناء المشروع
+      # 6. إعطاء صلاحية التنفيذ لملف gradlew الذي تم توليده
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      # 7. بناء التطبيق باستخدام الـWrapper الخاص بالمشروع
+      - name: Build APK with Gradle Wrapper
         run: ./gradlew assembleDebug
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+
+      # 8. رفع ملف الـAPK الناتج
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: release-${{ github.run_number }}
-          name: Release ${{ github.run_number }}
-          files: app/build/outputs/apk/debug/app-debug.apk
+          name: font-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
