--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,12 @@
 rootProject.name = "OneUIExample"
 include ':app'
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        // أضف هذا السطر
+        maven { url 'https://jitpack.io' }
+    }
+}
