--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,3 @@
-plugins {
-    id 'com.android.application' version '8.1.3'
-}
 rootProject.name = "OneUIExample"
 include ':app'
 
@@ -9,7 +6,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        // أضف هذا السطر
+        // هذا هو المستودع الضروري
         maven { url 'https://jitpack.io' }
     }
 }
