--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,19 +15,17 @@ android {
     }
     buildTypes {
         release {
-            // يمكن إضافة إعدادات التوقيع إن وجدت
             minifyEnabled false
         }
     }
 }
 
 dependencies {
-    // Other dependencies...
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "com.google.android.material:material:1.8.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     
-    // أضف المكتبات التالية
+    // المكتبات الخاصة بـ One UI
     implementation 'com.github.OneUIProject:oneui-core:0.4.1'
     implementation 'com.github.OneUIProject:oneui-design:0.4.1'
 }
