--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,22 @@ android {
     }
 }
 
-dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation project(path: ':yanndroid:oneui')
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+dependencies {
+    api("androidx.annotation:annotation:$androidx_annotation_version")
+
+    api("io.github.oneuiproject.sesl:appcompat:$sesl_appcompat_version")
+    implementation("io.github.oneuiproject.sesl:indexscroll:$sesl_indexscroll_version")
+    implementation("io.github.oneuiproject.sesl:picker-color:$sesl_picker_color_version")
+    implementation("io.github.oneuiproject.sesl:picker-basic:$sesl_picker_basic_version")
+    implementation("io.github.oneuiproject.sesl:preference:$sesl_preference_version")
+    implementation("io.github.oneuiproject.sesl:material:$sesl_material_version")
+
+    implementation("com.google.zxing:core:3.4.1")
+}
+
+ext {
+    POM_ARTIFACT_ID = "design"
+    POM_NAME = "One UI Design"
+    POM_DESCRIPTION = "One UI Design Library."
 }
