--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.oneui'
-    compileSdk 34 // The SDK version to compile against
+    compileSdk 35 // The SDK version to compile against
 
     defaultConfig {
         applicationId "com.example.oneui"
@@ -28,22 +28,7 @@ android {
     }
 }
 
-
 dependencies {
-    api("androidx.annotation:annotation:$androidx_annotation_version")
-
-    api("io.github.oneuiproject.sesl:appcompat:$sesl_appcompat_version")
-    implementation("io.github.oneuiproject.sesl:indexscroll:$sesl_indexscroll_version")
-    implementation("io.github.oneuiproject.sesl:picker-color:$sesl_picker_color_version")
-    implementation("io.github.oneuiproject.sesl:picker-basic:$sesl_picker_basic_version")
-    implementation("io.github.oneuiproject.sesl:preference:$sesl_preference_version")
-    implementation("io.github.oneuiproject.sesl:material:$sesl_material_version")
-
-    implementation("com.google.zxing:core:3.4.1")
-}
-
-ext {
-    POM_ARTIFACT_ID = "design"
-    POM_NAME = "One UI Design"
-    POM_DESCRIPTION = "One UI Design Library."
+    // ...
+    implementation 'io.github.oneuiproject:design:<version>'
 }
