--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,6 +42,10 @@ jobs:
 
       - name: Build APK with Gradle Wrapper
         run: ./gradlew assembleDebug
+        env:
+          # This maps the GitHub secrets to Gradle properties
+          ORG_GRADLE_PROJECT_jitpack.username: ${{ secrets.JITPACK_USERNAME }}
+          ORG_GRADLE_PROJECT_jitpack.token: ${{ secrets.JITPACK_TOKEN }}
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
