--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,9 +44,7 @@ jobs:
         run: ./gradlew assembleDebug
         # --- هذا هو الجزء المهم الذي يحل مشكلة المصادقة مع JitPack ---
         env:
-          # This maps the GitHub secrets to Gradle properties
-          ORG_GRADLE_PROJECT_jitpack.username: ${{ secrets.JITPACK_USERNAME }}
-          ORG_GRADLE_PROJECT_jitpack.token: ${{ secrets.JITPACK_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
