--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,7 +44,7 @@ jobs:
         run: ./gradlew assembleDebug
         # --- هذا هو الجزء المهم الذي يحل مشكلة المصادقة مع JitPack ---
         env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          JITPACK_TOKEN: ${{ secrets.JITPACK_TOKEN }}
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
