--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     
     // One UI Project Library (الصيغة الصحيحة حسب التوثيق الرسمي)
-    implementation 'io.github.OneUIProject:design:1.2.6'
+    implementation 'io.github.oneuiproject:design:1.2.6'
 }
