--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,10 @@ android {
 }
 
 dependencies {
-    // Standard Android libraries
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "com.google.android.material:material:1.8.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    
-    // One UI Project Library (الصيغة الصحيحة حسب التوثيق الرسمي)
+    // تم استبدال المكتبات الأساسية بمكتبات One UI Project
+    implementation 'io.github.oneuiproject:core:1.3.0'
     implementation 'io.github.oneuiproject:design:1.2.6'
+    
+    // احتفظ بالمكتبات التي لا تتعارض
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 }
