--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        // تم حذف Jitpack
+        // يجب إضافة مستودع Jitpack هنا للوصول إلى مكتبات One UI
+        maven { url "https://jitpack.io" }
     }
 }
 
