--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,13 @@
+# اسم Workflow
 name: Generate Wrapper & Build APK (No Local PC)
 
+# متى يتم تشغيل هذا Workflow
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
+# الوظائف
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,6 +44,9 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build APK with Gradle Wrapper
+        # إضافة رمز الوصول كمتغير بيئة
+        env:
+          JITPACK_TOKEN: ${{ secrets.JITPACK_TOKEN }}
         run: ./gradlew assembleDebug
 
       - name: Upload APK Artifact
