--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        // يجب إضافة مستودع Jitpack هنا للوصول إلى مكتبات One UI
-        maven { url "https://jitpack.io" }
+        maven { 
+            url 'https://jitpack.io'
+            credentials {
+                username = 'token'
+                password = System.getenv("JITPACK_TOKEN")
+            }
+        }
     }
 }
 
