--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
 dependencies {
     // تم استبدال المكتبات الأساسية بمكتبات One UI Project
-    implementation 'io.github.oneuiproject:core:1.4.0'
+    implementation 'io.github.oneuiproject.sesl:core:1.3.0'
     implementation 'io.github.oneuiproject:design:1.2.6'
     
     // احتفظ بالمكتبات التي لا تتعارض
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
 }
