--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven {
-            url 'https://jitpack.io'
+            url 'https://www.jitpack.io'
             credentials {
                 username = 'token'
                 password = System.getenv("JITPACK_TOKEN")
