--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,16 @@
-// Apply the application plugin for Android
 plugins {
     id 'com.android.application'
 }
 
+configurations.all {
+    // استبعاد مكتبات AndroidX الافتراضية لمنع تعارض مع مكتبات One UI
+    exclude group: 'androidx.appcompat', module: 'appcompat'
+    exclude group: 'androidx.core', module: 'core'
+}
+
 android {
     namespace 'com.example.oneui'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.oneui"
@@ -13,6 +18,13 @@ android {
         targetSdk 35
         versionCode 1
         versionName "1.0"
+
+        // تمكين دعم الصور المتجهة عبر مكتبة دعم متجهات Android
+        vectorDrawables.useSupportLibrary = true
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
@@ -28,10 +40,13 @@ android {
 }
 
 dependencies {
-    // تم استبدال المكتبات الأساسية بمكتبات One UI Project
+    // مكتبات One UI الأساسية (SES core و Design)
     implementation 'io.github.oneuiproject.sesl:core:1.3.0'
     implementation 'io.github.oneuiproject:design:1.2.6'
     
-    // احتفظ بالمكتبات التي لا تتعارض
+    // مكتبة أيقونات One UI (اختياري لتحسين الواجهة)
+    implementation 'io.github.oneuiproject:icons:1.1.0'
+    
+    // مكتبة التخطيط ConstraintLayout التي لا تتعارض
     implementation "androidx.constraintlayout:constraintlayout:2.2.1"
 }
