--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.2.1"
 
     implementation 'io.github.oneuiproject.sesl:material:1.5.0'
+
+    implementation 'io.github.oneuiproject:design:1.2.6'
 }
