--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="@string/app_name"
-        android:theme="@style/OneUIThemeDayNight">
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         <activity
             android:name=".MainActivity"
             android:exported="true">
