--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:label="@string/app_name"
-        android:theme="@style/OneUIThemeDayNight">
+        android:theme="@style/OneUITheme">
         <activity
             android:name=".MainActivity"
             android:exported="true">
