--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-android.useAndroidX=true
-android.enableJetifier=true
+android.useAndroidX=false
+android.enableJetifier=false
 android.suppressUnsupportedCompileSdk=35
