--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,13 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-
-      - name: Install Maturin
-        run: pip install maturin
 
       - name: Set up JDK 21
         uses: actions/setup-java@v5
@@ -25,7 +21,7 @@ jobs:
       - name: Use project-local Gradle cache
         run: echo "GRADLE_USER_HOME=$GITHUB_WORKSPACE/.gradle" >> $GITHUB_ENV
 
-      - name: Clear possibly corrupt Gradle jars cache
+      - name: Clear possibly corrupt Gradle cache
         run: rm -rf ~/.gradle/caches/jars-9 || true
 
       - name: Download Gradle 8.14.3 temporarily
@@ -34,7 +30,7 @@ jobs:
       - name: Unzip temporary Gradle
         run: unzip -q gradle-8.14.3-bin.zip
 
-      - name: Generate project's Gradle Wrapper files
+      - name: Generate Gradle Wrapper
         run: ./gradle-8.14.3/bin/gradle wrapper --gradle-version 8.14.3 --distribution-type all
 
       - name: Make gradlew executable
@@ -48,5 +44,5 @@ jobs:
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-         name: oneui-debug-apk
-         path: app/build/outputs/apk/debug/app-debug.apk
+          name: oneui-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
