--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 configurations.all {
-    // استبعاد مكتبات AndroidX الافتراضية لمنع تعارض مع مكتبات One UI
+    // Exclude default AndroidX libraries to avoid conflicts with One UI SESL libraries
     exclude group: 'androidx.appcompat', module: 'appcompat'
     exclude group: 'androidx.core', module: 'core'
 }
@@ -18,8 +18,6 @@ android {
         targetSdk 35
         versionCode 1
         versionName "1.0"
-
-        // تمكين دعم الصور المتجهة عبر مكتبة دعم متجهات Android
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -40,16 +38,16 @@ android {
 }
 
 dependencies {
-    // SESL (One UI) libraries
+    // One UI core (SESL) libraries (exclude AndroidX as above)
     implementation 'io.github.oneuiproject.sesl:appcompat:1.4.0'
     implementation 'io.github.oneuiproject.sesl:core:1.3.0'
-    implementation 'io.github.oneuiproject.sesl:customview:1.1.0' // يحوي widgets مخصصة (مثل com.oneui.widget.TextView)
+    implementation 'io.github.oneuiproject.sesl:customview:1.1.0'
     implementation 'io.github.oneuiproject.sesl:material:1.5.0'
 
-    // One UI icons / design
+    // One UI icons and design libraries
     implementation 'io.github.oneuiproject:icons:1.1.0'
     implementation 'io.github.oneuiproject:design:1.2.6'
 
-    // ConstraintLayout
+    // AndroidX ConstraintLayout (can be used alongside One UI SESL libraries)
     implementation "androidx.constraintlayout:constraintlayout:2.2.1"
 }
