--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'io.github.oneuiproject.sesl:core:1.3.0'
     implementation 'io.github.oneuiproject.sesl:customview:1.1.0'
     implementation 'io.github.oneuiproject.sesl:material:1.5.0'
+    implementation "io.github.oneuiproject.sesl:preference:1.1.0
 
     // One UI icons and design libraries
     implementation 'io.github.oneuiproject:icons:1.1.0'
