--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'io.github.oneuiproject.sesl:customview:1.1.0'
     implementation 'io.github.oneuiproject.sesl:material:1.5.0'
 
-    // SESL Preference (One UI styled) — fixed quote
+    // SESL Preference (One UI styled)
     implementation "io.github.oneuiproject.sesl:preference:1.1.0"
 
     // One UI icons and design libraries
