--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'io.github.oneuiproject.sesl:core:1.3.0'
     implementation 'io.github.oneuiproject.sesl:customview:1.1.0'
     implementation 'io.github.oneuiproject.sesl:material:1.5.0'
+    implementation("io.github.oneuiproject.sesl:indexscroll:1.0.3'
 
     // SESL Preference (One UI styled)
     implementation "io.github.oneuiproject.sesl:preference:1.1.0"
