--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 
 configurations.all {
-    // Exclude default AndroidX libraries to avoid conflicts with One UI SESL libraries
     exclude group: 'androidx.appcompat', module: 'appcompat'
     exclude group: 'androidx.core', module: 'core'
 }
@@ -38,20 +37,13 @@ android {
 }
 
 dependencies {
-    // One UI core (SESL) libraries
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+
+    // Optional: One UI SESL libraries (keep if you use them)
     implementation 'io.github.oneuiproject.sesl:appcompat:1.4.0'
-    implementation 'io.github.oneuiproject.sesl:core:1.3.0'
-    implementation 'io.github.oneuiproject.sesl:customview:1.1.0'
-    implementation 'io.github.oneuiproject.sesl:material:1.5.0'
-    implementation("io.github.oneuiproject.sesl:indexscroll:1.0.3'
-
-    // SESL Preference (One UI styled)
-    implementation "io.github.oneuiproject.sesl:preference:1.1.0"
-
-    // One UI icons and design libraries
+    implementation 'io.github.oneuiproject.sesl:preference:1.1.0'
     implementation 'io.github.oneuiproject:icons:1.1.0'
-    implementation 'io.github.oneuiproject:design:1.2.6'
-
-    // AndroidX ConstraintLayout (can be used alongside One UI SESL libraries)
-    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
 }
