--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 configurations.all {
+    // استثناء المكتبات القياسية لـ AndroidX بناءً على توجيهات OneUIProject
     exclude group: 'androidx.appcompat', module: 'appcompat'
     exclude group: 'androidx.core', module: 'core'
 }
@@ -37,14 +38,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    // مكتبات One UI SESL الرئيسية بدلاً من المكتبات الافتراضية
+    implementation 'io.github.oneuiproject.sesl:appcompat:1.4.0'
+    implementation 'io.github.oneuiproject.sesl:material:1.5.0'
+    implementation 'io.github.oneuiproject.sesl:recyclerview:1.4.1'
+
+    // مكتبات القيود (لا توجد بديل SESL لها)
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 
-    // Optional: SESL libraries (keep if you use One UI SESL)
-    implementation 'io.github.oneuiproject.sesl:appcompat:1.4.0'
+    // مكتبات SESL الاختيارية
     implementation 'io.github.oneuiproject.sesl:preference:1.1.0'
-    implementation 'io.github.oneuiproject.sesl:indexscroll:1.0.3' // لإضافة فهرس تمرير جانبي (اختياري)
+    implementation 'io.github.oneuiproject.sesl:indexscroll:1.0.3'  // لإضافة فهرس تمرير جانبي (اختياري)
     implementation 'io.github.oneuiproject:icons:1.1.0'
 }
