--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ configurations.all {
 
 dependencies {
     // مكتبة AndroidX
+    implementation 'io.github.oneuiproject.sesl:core:1.3.0'
     implementation 'io.github.oneuiproject.sesl:appcompat:1.4.0'
     implementation 'io.github.oneuiproject:icons:1.1.0'
     implementation 'io.github.oneuiproject:design:1.2.6'
